@@ -1,0 +1,47 @@
+/*
+ * Copyright (C) 2007 Rob Manning
+ * manningr@users.sourceforge.net
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 2.1 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this library; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ */
+package net.sourceforge.squirrel_sql.fw.util;
+
+/**
+ * An interface that will allow plugin writers to customize the MessageHandler
+ * in SQuirreL to handle sometimes cryptic messages embedded in SQLExceptions
+ * from JDBC drivers.(FR#1731251)
+ *  
+ * @author manningr
+ */
+public interface ExceptionFormatter {
+    
+    /**
+     * Returns a boolean indicating whether or not this formatter can format the
+     * specified exception.
+     * 
+     * @param t the exception to determine formatting compatibility
+     * @return
+     */
+    boolean formatsException(Throwable t);
+    
+    /**
+     * 
+     * @param t the exception to be formatted
+     * 
+     * @return the message
+     */
+    String format(Throwable t);
+    
+}
